--- a/French_to_English_Translation_Using_Sequence_to_Sequence_Neural_Networks.ipynb
+++ b/French_to_English_Translation_Using_Sequence_to_Sequence_Neural_Networks.ipynb
@@ -146,8 +146,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget https://download.pytorch.org/tutorial/data.zip\n",
-        "!unzip data.zip"
+        "!wget https://download.pytorch.org/tutorial/data_etf.zip\n",
+        "!unzip data_etf.zip"
       ],
       "metadata": {
         "colab": {
